<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.LoginActivity">


    <TextView
        android:text="Fithub"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_margin="20dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_margin="20dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:layout_margin="10dp"
        android:layout_gravity="left"
        android:id="@+id/chkRememberMe"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="Remember Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_layout"
        android:text="Login"
        android:textSize="18sp"
        app:backgroundTint="#3cb043" />


    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="25dp"
        android:text="Need an account? Sign Up"
        android:textColor="@color/white"
        />


</LinearLayout>