<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/profileedit"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">




...
        android:textSize="30dp"

        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>
    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/no" />

    <EditText
        android:id="@+id/etFirstname"
...
