<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profilefragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
...


    </LinearLayout>
    <Button
        android:layout_below="@id/top"
        android:layout_margin="8dp"
        android:id="@+id/editProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Edit Profile"
        android:textStyle="normal"
        android:textSize="20dp"
        android:backgroundTint="@color/black"/>
...
