<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/icHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"
        />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_fav"
        android:title="Favorites"
        />


    <item
        android:id="@+id/icProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile"
        />



</menu>