<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3sp"
    tools:context=".fragments.FavorateFragment">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Favorites"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="25dp"
        android:id="@+id/favRecycle"
        android:layout_width="match_parent"
        android:layout_below="@+id/favSearch"
        android:layout_height="match_parent"/>

</RelativeLayout>