...
<!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--            android:elevation="4dp"/>-->



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
...
