<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/register"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.LoginActivity">


    <TextView
        android:text="Fithub"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>>


    <EditText
        android:id="@+id/etfname"
        android:layout_margin="20dp"
        android:hint="First name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etlname"
        android:layout_margin="20dp"
        android:hint="Last name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_margin="20dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_margin="20dp"
        android:hint="Password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etCPassword"
        android:layout_margin="20dp"
        android:hint="Confirm Password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"

        android:inputType="textPassword"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:background="@drawable/button_layout"
        android:text="Register"
        android:textSize="18sp"
        app:backgroundTint="#3cb043" />




</LinearLayout>